Solution to session 15 - includes Register and a series of other small improvements
