# SampleApi/AngularTrainingExampleAPI/DTOs/RegisterRequestDto.cs
@@ -1,0 +1,3 @@
+namespace AngularTrainingExampleAPI.DTOs;
+
+public record RegisterRequestDto(string username, string lastName, string password);
