# exercises/src/app/validators/matchingPasswordValidator.ts
@@ -1,0 +1,8 @@
+﻿import {AbstractControl, ValidationErrors, ValidatorFn} from "@angular/forms";
+
+export function matchingPasswordValidator(): ValidatorFn {
+   return (control: AbstractControl): ValidationErrors | null => {
+      const passwordsAreTheSame = control.get("password")?.value === control.get("passwordConfirmation")?.value;
+      return passwordsAreTheSame ? null : {passwordsDontMatch: {value: ""}};
+   }
+}
